--- a/openapi/petstore.good.yaml
+++ b/openapi/petstore.good.yaml
@@ -1,7 +1,7 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: Swagger Petstore 2 Good Try
+  title: Swagger Petstore 2 Good Try 2
   license:
     name: MIT
 servers:
